fresh chat widget, layout alignment issues fixed

--- a/public/src/chat/chat.scss
+++ b/public/src/chat/chat.scss
@@ -176,7 +176,7 @@
 
 .chat-dashboard-link {
   li{
-    width: 116px;
+    width: 108px;
     float: left;
     background-color: #f2f2f2;
     color: #666;
